Avoiding clashing fonts within relengapi.

--- a/relengapi/blueprints/clobberer/static/clobberer.css
+++ b/relengapi/blueprints/clobberer/static/clobberer.css
@@ -2,7 +2,6 @@
  * License, v. 2.0. If a copy of the MPL was not distributed with this
  * file, You can obtain one at http://mozilla.org/MPL/2.0/. */
 table {
-    font-family:Arial, Helvetica, sans-serif;
     color:#666;
     font-size:12px;
     text-shadow: 1px 1px 0px #fff;
